crates/doodle-core/tests/snapshots/broken_syntax__07_missing_then.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected `then` after the `if` condition
  --> 07-missing-then.doodle:2:7
2 |   if x
  |       ^
